Pushing unchecked, before checking everything once again
