# service/api/comment.go
@@ -4,13 +4,28 @@ import (
 	"encoding/json"
 	"net/http"
 	"strconv"
+	"time"
 
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
 )
 
 func (rt *_router) getPhotoComments(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	user, code, err := rt.GetUserFromParameter("uname", r, ps)
+	token, err := GetBearerToken(r.Header.Get("Authorization"))
+
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	dbUser, err := rt.db.GetDatabaseUser(uint32(token))
+
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	photoUser, code, err := rt.GetUserFromParameter("uname", r, ps)
 
 	if err != nil {
 		http.Error(w, err.Error(), code)
@@ -24,12 +39,12 @@ func (rt *_router) getPhotoComments(w http.ResponseWriter, r *http.Request, ps h
 		return
 	}
 
-	if photo.User.Id != user.Id {
+	if photo.User.Id != photoUser.Id {
 		http.Error(w, ErrPageNotFound.Error(), http.StatusNotFound)
 		return
 	}
 
-	dbCommentList, err := rt.db.GetCommentList(photo.PhotoIntoDatabasePhoto())
+	dbCommentList, err := rt.db.GetCommentList(dbUser, photo.PhotoIntoDatabasePhoto())
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
@@ -95,9 +110,13 @@ func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httpr
 		return
 	}
 
+	comment.Photo = photo
+
+	comment.Date = time.Now().Format("2006-01-02 15:04:05")
+
 	dbComment := comment.CommentIntoDatabaseComment()
 
-	err = rt.db.InsertComment(&dbComment, photo.PhotoIntoDatabasePhoto())
+	err = rt.db.InsertComment(&dbComment)
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
@@ -154,7 +173,7 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 		return
 	}
 
-	err = rt.db.RemoveComment(comment.CommentIntoDatabaseComment(), photo.PhotoIntoDatabasePhoto())
+	err = rt.db.DeleteComment(comment.CommentIntoDatabaseComment())
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
